# sdkwork-cms

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/content/: cms-app-api.openapi.json
apis/backend-api/content/: cms-backend-api.openapi.json
apis/open-api/content/: cms-open-api.openapi.json
apps/: README.md
apps/sdkwork-cms-h5/: index.html  package-lock.json  package.json  vite.config.ts
apps/sdkwork-cms-h5/src/: App.tsx  index.css
apps/sdkwork-cms-pc/: index.html  package-lock.json  package.json  vite.config.ts
apps/sdkwork-cms-pc/src/: App.tsx  index.css
configs/: README.md  sdkwork-api-cloud-gateway.cms.development.toml  sdkwork-api-cloud-gateway.cms.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/: README.md
crates/sdkwork-api-cms-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-cms-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-cms-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-cms-standalone-gateway/: Cargo.toml
crates/sdkwork-api-cms-standalone-gateway/src/: handlers.rs  lib.rs  main.rs
crates/sdkwork-cms-api-server/: Cargo.toml
crates/sdkwork-cms-api-server/src/: db_check.rs  handlers.rs  main.rs  readiness.rs
crates/sdkwork-cms-database-host/: Cargo.toml
crates/sdkwork-cms-database-host/src/: lib.rs
crates/sdkwork-cms-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-cms-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-cms-http-handlers/: Cargo.toml
crates/sdkwork-cms-http-handlers/specs/: README.md  component.spec.json
crates/sdkwork-cms-http-handlers/src/: handlers.rs  lib.rs
crates/sdkwork-cms-standalone-gateway/: Cargo.toml
crates/sdkwork-cms-standalone-gateway/src/: handlers.rs  lib.rs
crates/sdkwork-content-cms-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-content-cms-repository-sqlx/migrations/: 0001_cms_v1_foundation.sql
crates/sdkwork-content-cms-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-content-cms-repository-sqlx/src/: bootstrap.rs  error.rs  lib.rs
crates/sdkwork-content-cms-repository-sqlx/src/db/: columns.rs  indexes.rs  mod.rs  rows.rs  schema.rs
crates/sdkwork-content-cms-repository-sqlx/src/mapper/: mod.rs  row_mapper.rs
crates/sdkwork-content-cms-repository-sqlx/src/repository/: cms_repository.rs  content_modeling.rs  entries.rs  feeds.rs  governance.rs  mod.rs  pages.rs  port_impl.rs  publishing.rs  queries.rs  sites.rs  taxonomy.rs
crates/sdkwork-content-cms-repository-sqlx/tests/: schema_mapping_smoke.rs
crates/sdkwork-content-cms-service/: Cargo.toml  README.md
crates/sdkwork-content-cms-service/specs/: README.md  component.spec.json
crates/sdkwork-content-cms-service/src/: context.rs  error.rs  lib.rs
crates/sdkwork-content-cms-service/tests/: service_smoke.rs  service_unit.rs
crates/sdkwork-router-cms-app-api/: Cargo.toml  README.md
crates/sdkwork-router-cms-app-api/specs/: component.spec.json
crates/sdkwork-router-cms-app-api/src/: handlers.rs  lib.rs  manifest.rs  routes.rs
crates/sdkwork-router-cms-app-api/tests/: route_standard.rs
crates/sdkwork-router-cms-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-cms-open-api/: Cargo.toml  README.md
crates/sdkwork-router-cms-open-api/specs/: README.md  component.spec.json
crates/sdkwork-router-cms-open-api/src/: http_route_manifest.rs  lib.rs  manifest.rs  paths.rs  web_bootstrap.rs
crates/sdkwork-router-cms-open-api/src/dto/: mod.rs  request.rs  response.rs
crates/sdkwork-router-cms-open-api/src/handlers/: entries.rs  feeds.rs  pages.rs
crates/sdkwork-router-cms-open-api/src/mapper/: request.rs
crates/sdkwork-router-cms-open-api/tests/: open_route_manifest.rs  route_standard.rs
crates/sdkwork-routes-cms-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-cms-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-cms-open-api/: Cargo.toml  README.md
crates/sdkwork-routes-cms-open-api/specs/: component.spec.json
crates/sdkwork-routes-cms-open-api/src/: handlers.rs  http_route_manifest.rs  lib.rs  manifest.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-cms-open-api/src/dto/: request.rs
crates/sdkwork-routes-cms-open-api/src/mapper/: problem.rs  request.rs  response.rs
crates/sdkwork-routes-cms-open-api/tests/: open_route_manifest.rs  route_standard.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
deployments/: README.md
docs/: INDEX.yaml  README.md  implementation-todos.md
docs/api/: cms-v1-api.md  cms-v1-operation-registry.json
docs/architecture/: cms-backend-architecture.md
docs/database/: cms-v1-column-registry.json  cms-v1-schema.md  cms-v1-table-registry.json
docs/integration/: cms-v1-integration-registry.json
docs/plans/: 2026-06-13-cms-implementation-completion.md
docs/security/: cms-v1-permission-registry.json
etc/: sdkwork-api-cloud-gateway.cms.development.toml  sdkwork-api-cloud-gateway.cms.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md
sdks/: README.md
sdks/sdkwork-cms-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-cms-backend-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-cms-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
specs/: topology.spec.json
tests/: README.md
tests/static/: cms-contract-boundary.test.mjs
tools/: README.md  materialize_cms_database_contract.mjs
(+109 files in other folders)
