[workspace]
members = [
    "crates/sdkwork-cms-gateway-assembly",
    "crates/sdkwork-cms-database-host",
    "crates/sdkwork-content-cms-service",
    "crates/sdkwork-content-cms-repository-sqlx",
    "crates/sdkwork-routes-cms-open-api",
    "crates/sdkwork-routes-cms-app-api",
    "crates/sdkwork-routes-cms-backend-api",
    "crates/sdkwork-cms-standalone-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
sdkwork-web-axum = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-iam-web-adapter = { path = "../../../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-core = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-content-cms-service = { path = "crates/sdkwork-content-cms-service" }
sdkwork-content-cms-repository-sqlx = { path = "crates/sdkwork-content-cms-repository-sqlx" }
sdkwork-routes-cms-open-api = { path = "crates/sdkwork-routes-cms-open-api" }
sdkwork-routes-cms-app-api = { path = "crates/sdkwork-routes-cms-app-api" }
sdkwork-routes-cms-backend-api = { path = "crates/sdkwork-routes-cms-backend-api" }
sdkwork-cms-database-host = { path = "crates/sdkwork-cms-database-host" }

sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
tracing = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
