[package]
name = "sdkwork-api-cms-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-cms application HTTP plane."

[lib]
name = "sdkwork_api_cms_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-cms-app-api.workspace = true
sdkwork-routes-cms-backend-api.workspace = true
sdkwork-routes-cms-open-api.workspace = true
