[package]
name = "sdkwork-api-cms-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-cms application HTTP plane."

[lib]
name = "sdkwork_api_cms_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
async-trait.workspace = true
sqlx.workspace = true
sdkwork-cms-http-handlers.workspace = true
sdkwork-content-cms-service.workspace = true
sdkwork-content-cms-repository-sqlx.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
sdkwork-routes-cms-app-api.workspace = true
sdkwork-routes-cms-backend-api.workspace = true
sdkwork-routes-cms-open-api.workspace = true
