[package]
name = "sdkwork-api-cms-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sdkwork-api-cms-standalone-gateway"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_api_cms_assembly = { package = "sdkwork-api-cms-assembly", path = "../sdkwork-api-cms-assembly" }
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
sdkwork-web-bootstrap = { workspace = true }
