[package]
name = "sdkwork-cms-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cms-server"
path = "src/main.rs"

[dependencies]
sdkwork-content-cms-service.workspace = true
sdkwork-content-cms-repository-sqlx.workspace = true
sdkwork-router-cms-backend-api.workspace = true
sdkwork-router-cms-app-api.workspace = true
sdkwork-router-cms-open-api.workspace = true

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
async-trait.workspace = true
dotenvy = "0.15"
