[package]
name = "sdkwork-cms-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cms-server"
path = "src/main.rs"

[dependencies]
sdkwork_cms_gateway_assembly = { package = "sdkwork-cms-gateway-assembly", path = "../sdkwork-cms-gateway-assembly" }
sdkwork-content-cms-service.workspace = true
sdkwork-content-cms-repository-sqlx.workspace = true
sdkwork-routes-cms-backend-api.workspace = true
sdkwork-routes-cms-app-api.workspace = true
sdkwork-routes-cms-open-api.workspace = true

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
async-trait.workspace = true
dotenvy = "0.15"
sdkwork-web-bootstrap = { workspace = true }

[[bin]]
name = "sdkwork-cms-standalone-gateway"
path = "src/main.rs"
