[package]
name = "sdkwork-cms-database-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork CMS database lifecycle bootstrap."

[lib]
name = "sdkwork_cms_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
