[package]
name = "sdkwork-cms-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-cms application HTTP plane."

[lib]
name = "sdkwork_cms_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_cms_app_api = { package = "sdkwork-routes-cms-app-api", path = "../sdkwork-routes-cms-app-api" }
sdkwork_routes_cms_backend_api = { package = "sdkwork-routes-cms-backend-api", path = "../sdkwork-routes-cms-backend-api" }
sdkwork_routes_cms_open_api = { package = "sdkwork-routes-cms-open-api", path = "../sdkwork-routes-cms-open-api" }
