[package]
name = "sdkwork-content-cms-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-content-cms-service.workspace = true
sdkwork-cms-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tracing.workspace = true
