[package]
name = "sdkwork-routes-cms-open-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-cms-http-handlers.workspace = true
sdkwork-content-cms-service.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-web-core = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["json"] }
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }

[dev-dependencies]
sdkwork-web-core = { workspace = true }
